--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -2,5 +2,6 @@
 <%= form_with model: @recipe do |f| %>
   <%= f.text_field :title %>
   <%= f.text_area :body %>
+  <%= f.file_field :image, accept: "image/*" %>
   <%= f.submit 'レシピを投稿'%>
 <% end %>
