--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   </head>
 
   <body>
+
+    <% if customer_signed_in? %>
+      <%= link_to '投稿', new_recipe_path %>
+      <%= link_to 'レシピ一覧', recipes_path %>
+      <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
+    <% elsif admin_signed_in? %>
+      <%= link_to '管理者ログアウト', destroy_adminsession_path, method: :delete %>
+    <% else %>
+      <%= link_to '新規登録', new_customer_registration_path %>
+      <%= link_to 'ログイン', new_customer_session_path %>
+      <%= link_to '管理者ログイン', new_admin_session_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
