--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,7 +1,6 @@
-<h1>新しいレシピを投稿</h1>
-<%= form_with model: @recipe do |f| %>
-  <%= f.text_field :title %>
-  <%= f.text_area :body %>
-  <%= f.file_field :image, accept: "image/*" %>
-  <%= f.submit 'レシピを投稿'%>
-<% end %>
+<div class="container">
+  <h1>新しいレシピを投稿</h1>
+  <%= form_with model: @recipe do |f| %>
+    <%= render "form", f: f %>
+  <% end %>
+</div>
