--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <% if customer_signed_in? %>
       <%= link_to '投稿', new_recipe_path %>
       <%= link_to 'レシピ一覧', recipes_path %>
+      <%= link_to 'マイページ', customer_path(current_customer) %>
       <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
     <% elsif admin_signed_in? %>
       <%= link_to '管理者ログアウト', destroy_admin_session_path, method: :delete %>
