--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -11,5 +11,6 @@
 <% end %>
 
 <% if @recipe.customer == current_customer %>
+<%= render "comments/form", recipe: @recipe, comment: @comment %>
   <%= link_to 'レシピを編集', edit_recipe_path(@recipe) %>
 <% end %>
