ADDいいね機能

--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -6,5 +6,6 @@
     <small class="text-black-50">
       <%= link_to recipe.customer.name, customer_path(recipe.customer) %>
     </small>
+    <%= render "public/favorites/favorites", recipe: recipe %>
   </div>
 <% end %>
