--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/fcaf7bc4c1.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -16,6 +17,7 @@
     <% if customer_signed_in? %>
       <%= link_to '投稿', new_recipe_path %>
       <%= link_to 'レシピ一覧', recipes_path %>
+      <%= link_to 'お気に入り', favorites_recipes_path %>
       <%= link_to 'マイページ', customer_path(current_customer) %>
       <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
     <% elsif admin_signed_in? %>
