--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -10,7 +10,9 @@
   </div>
 <% end %>
 
+
+<%= render "public/comments/index", recipe: @recipe, comment: @comment %>
+<%= render "public/comments/form", recipe: @recipe, comment: @comment %>
 <% if @recipe.customer == current_customer %>
-<%= render "comments/form", recipe: @recipe, comment: @comment %>
   <%= link_to 'レシピを編集', edit_recipe_path(@recipe) %>
 <% end %>
