--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,35 @@
   <body>
 
     <% if customer_signed_in? %>
-      <%= link_to '投稿', new_recipe_path %>
-      <%= link_to 'レシピ一覧', recipes_path %>
-      <%= link_to 'お気に入り', favorites_recipes_path %>
-      <%= link_to 'マイページ', customer_path(current_customer) %>
-      <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
+      <%= link_to new_recipe_path, class: "btn btn-success" do %>
+        投稿<i class="fa-solid fa-pen"></i>
+      <% end %>
+      <%= link_to recipes_path, class: "btn btn-success" do %>
+        レシピ一覧<i class="fa-solid fa-utensils"></i>
+      <% end %>
+      <%= link_to favorites_recipes_path, class: "btn btn-success" do %>
+        お気に入り<i class="fa-solid fa-heart"></i>
+      <% end %>
+      <%= link_to customer_path(current_customer), class: "btn btn-success" do %>
+        マイページ<i class="fa-solid fa-user"></i>
+      <% end %>
+      <%= link_to destroy_customer_session_path, method: :delete, class: "btn btn-success" do %>
+        ログアウト<i class="fa-solid fa-right-from-bracket"></i>
+      <% end %>
     <% elsif admin_signed_in? %>
-      <%= link_to '管理者ログアウト', destroy_admin_session_path, method: :delete %>
+      <%= link_to destroy_admin_session_path, method: :delete, class: "btn btn-success" do %>
+        管理者ログアウト<i class="fa-solid fa-lock"></i>
+      <% end %>
     <% else %>
-      <%= link_to '新規登録', new_customer_registration_path %>
-      <%= link_to 'ログイン', new_customer_session_path %>
-      <%= link_to '管理者ログイン', new_admin_session_path %>
+      <%= link_to new_customer_registration_path, class: "btn btn-success" do %>
+        新規登録<i class="fa-solid fa-address-card"></i>
+      <% end %>
+      <%= link_to new_customer_session_path, class: "btn btn-success" do %>
+        ログイン<i class="fa-solid fa-right-to-bracket"></i>
+      <% end %>
+      <%= link_to new_admin_session_path, class: "btn btn-success" do %>
+        管理者ログイン<i class="fa-solid fa-unlock"></i>
+      <% end %>
     <% end %>
 
     <%= yield %>
