--- a/app/views/public/recipes/_form.html.erb
+++ b/app/views/public/recipes/_form.html.erb
@@ -9,6 +9,43 @@
 <div class="form-group">
   <%= f.file_field :images, multiple: true, accept: "image/*" %>
 </div>
-<div class="form-group">
-  <%= f.submit 'レシピを投稿', class: "btn btn-primary" %>
+
+<div class="form-group add-ingredients">
+  <%= link_to_add_association '材料追加',
+                              # form_withのformタグ変数
+                              f,
+                              # フォームのデータを追加するモデル名
+                              :recipe_ingredients,
+                              # 追加するフォームの部分テンプレート
+                              partial: "ingredient",
+                              # オプション
+                              data: {
+                                # フォームを追加する場所の指定
+                                association_insertion_node: '#ingredients-group',
+                                association_insertion_method: 'append'
+                              },
+                              class: "btn btn-warning"
+  %>
 </div>
+
+
+<div id="ingredients-group">
+  <%= f.fields_for :recipe_ingredients do |recipe_ingredient| %>
+    <% render 'ingredient', f: recipe_ingredient %>
+  <% end %>
+</div>
+
+<div class="form-group">
+  <%= f.submit name, class: "btn btn-primary" %>
+</div>
+
+<script>
+  // $(function() {
+  //   $('.container').on('cocoon:before-remove', function(event, insertedItem) {
+  //     console.log()
+  //     if( $("#ingredients-group .nested-fields").length <= 1 ){
+  //       event.preventDefault();
+  //     }
+  //   });
+  // })
+</script>
