--- a/app/views/public/recipes/edit.html.erb
+++ b/app/views/public/recipes/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>レシピの編集</h1>
-<%= form_with model: @recipe, method: :patch do |f| %>
-   <%= render "form", f: f %>
-<% end %>
+<div class="container">
+  <h1>レシピの編集</h1>
+  <%= form_with model: @recipe, method: :patch do |f| %>
+    <%= render "form", f: f, name: "レシピを更新" %>
+  <% end %>
+</div>
