--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>新しいレシピを投稿</h1>
   <%= form_with model: @recipe do |f| %>
-    <%= render "form", f: f %>
+    <%= render "form", f: f, name: "レシピを投稿" %>
   <% end %>
 </div>
