--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div>
-    <%= link_to "ユーザー名変更", edit_customer_path(@customer) %>
+    <%= link_to "ユーザー情報変更", edit_admin_customer_path(@customer) %>
   </div>
 </div>
