--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -1,10 +1,13 @@
-<h1>レシピ一覧</h1>
-<% @recipes.each do |recipe|%>
-  <div>
-    <%= link_to recipe.title, recipe_path(recipe) %>
-    <small class="text-black-50">
-      <%= link_to recipe.customer.name, customer_path(recipe.customer) %>
-    </small>
-    <%= render "public/favorites/favorites", recipe: recipe %>
-  </div>
-<% end %>
+<div class="container">
+  <h1>レシピ一覧</h1>
+  <% @recipes.each do |recipe|%>
+    <div>
+      <%= link_to recipe.title, recipe_path(recipe) %>
+      <small class="text-black-50">
+        <%= link_to recipe.customer.name, customer_mypage_path(recipe.customer) %>
+      </small>
+      <%= render "public/favorites/favorites", recipe: recipe %>
+    </div>
+  <% end %>
+
+</div>
