--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -2,7 +2,7 @@
   <h1>レシピ詳細</h1>
 
   <div><%= @recipe.title %></div>
-  <div><%= @recipe.body %></div>
+  <div><%= simple_format(@recipe.body) %></div>
   <% if @recipe.images.attached? %>
     <div>
       <% @recipe.images.each do |image| %>
