--- a/app/views/public/comments/_form.html.erb
+++ b/app/views/public/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: [recipe, comment] do |f| %>
-  <%= f.text_area :comment, rows: '5', placeholder: "comment", class: "w-100" %>
-  <%= f.submit "送信" %>
+  <%= f.text_area :comment, rows: '5', placeholder: "comment", class: "form-control w-100" %>
+  <%= f.submit "送信", class: "btn btn-secondary mt-2" %>
 <% end %>
