--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -1,33 +1,48 @@
 <div class="container">
-  <h1>レシピ詳細</h1>
-
-  <div><%= @recipe.title %></div>
-  <div><%= simple_format(@recipe.body) %></div>
+  <h1><div class="center-text"><%= @recipe.title %></div></h1>
+<div class="frame">
+    <%= simple_format(@recipe.body, class: "recipe-dot-line") %>
+</div>
   <% if @recipe.images.attached? %>
-    <div>
+    <div class="center-text">
       <% @recipe.images.each do |image| %>
-        <%= image_tag image, class: "img-fluid" ,size: "200x200"%>
+        <%= image_tag image, class: "img-fluid", size: "200x200" %>
         <% end %>
     </div>
   <% end %>
 
-  <h2>材料</h2>
-
-  <ol>
-    <% @recipe.recipe_ingredients.each do |recipe_ingredient| %>
-      <li>
-        <%= recipe_ingredient.name %>
-        <ul>
-          <li><%= recipe_ingredient.quantity %></li>
-        </ul>
-      </li>
-    <% end %>
-  </ol>
-
-  <% if @recipe.customer == current_customer %>
-    <%= link_to 'レシピを編集', edit_recipe_path(@recipe) %>
-    <%= link_to 'レシピを削除', recipe_path(@recipe), method: :delete, data: {confirm: "本当に削除しますか？"} %>
+  <div class="tag-box">
+  <% @recipe.tags.each do |tag| %>
+    <span class="badge badge-warning"><%= tag.name %></span>
   <% end %>
+  </div>
+
+  <h2><div class="center-text">材料</div></h2>
+
+  <div class="row">
+    <% @recipe.recipe_ingredients.each.with_index(1) do |recipe_ingredient, index| %>
+      <div class="col-md-6">
+        <div class="bg-white p-1">
+          <div class="row">
+            <div class="col-8">
+              [<%= index %>]
+              <%= recipe_ingredient.name %>
+            </div>
+            <div class="col-4">
+              <%= recipe_ingredient.quantity %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="mt-3">
+    <% if @recipe.customer == current_customer %>
+      <%= link_to 'レシピを編集', edit_recipe_path(@recipe), class: "btn btn-success", style: "border-width: 3px; border-color: black;" %>
+      <%= link_to 'レシピを削除', recipe_path(@recipe), class: "btn btn-success", style: "border-width: 3px; border-color: black;", method: :delete, data: {confirm: "本当に削除しますか？"} %>
+    <% end %>
+  </div>
 
   <%= render "public/comments/index", recipe: @recipe, comment: @comment %>
   <%= render "public/comments/form", recipe: @recipe, comment: @comment %>
