--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,5 +1,16 @@
 <div class="container">
-  <h1>新しいレシピを投稿</h1>
+ <style>
+    .text {
+    color: blue;  /* 目立たせたいテキストの色を指定する */
+    font-size: 40px;  /* テキストのフォントサイズを指定する */
+    font-weight: bold;  /* テキストを太字にする */
+    text-align: center;
+    text-decoration: underline;
+    text-shadow: 2px 2px 0px white;
+    }
+</style>
+
+<h1 class="text">新しいレシピを投稿</h1>
   <%= form_with model: @recipe do |f| %>
     <%= render "form", f: f, name: "レシピを投稿" %>
   <% end %>
