--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,1 @@
- <style>
-    .text {
-    color: blue;  /* 目立たせたいテキストの色を指定する */
-    font-size: 40px;  /* テキストのフォントサイズを指定する */
-    font-weight: bold;  /* テキストを太字にする */
-    text-align: center;
-    text-decoration: underline;
-    text-shadow: 2px 2px 0px white;
-    }
-</style>
-
-<h1 class="text">おいしいレシピが知れるホーム</h1>
+<h1 class="text">おいしいレシピが知れるサイト</h1>
