--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
+  <h2 class="text"><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
 
   <div>
     <h3>投稿したレシピ一覧</h3>
