--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -2,9 +2,9 @@
   <h1>レシピ一覧</h1>
   <% @recipes.each do |recipe|%>
     <div>
-      <%= link_to recipe.title, recipe_path(recipe) %>
+      <%= link_to recipe.title, recipe_path(recipe), class: "btn btn-outline-dark" %>
       <small class="text-black-50">
-        <%= link_to recipe.customer.name, customer_mypage_path(recipe.customer) %>
+        <%= link_to recipe.customer.name, customer_mypage_path(recipe.customer), class: "btn btn-primary" %>
       </small>
       <%= render "public/favorites/favorites", recipe: recipe %>
     </div>
