--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,14 @@
   text-shadow: 2px 2px 0px white;
 }
 
+.shadow {
+color: white;
+text-shadow: 2px  2px 5px black,
+            -2px  2px 5px black,
+             2px -2px 5px black,
+            -2px -2px 5px black;
+}
+
 // * This is a manifest file that'll be compiled into application.css, which will include all the files
 // * listed below.
 // *
