--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <h2 class="text"><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
+  <h2 class="shadow"><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
 
   <div>
-    <h3>投稿したレシピ一覧</h3>
+    <h3 class="shadow" >投稿したレシピ一覧</h3>
     <% if @recipes.present? %>
       <ul>
         <% @recipes.each do |recipe| %>
