--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-
-    <h2 class="btn btn-primary" >新規登録</h2>
+<div class="shadow">
+    <h2>新規登録</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "public/shared/error_messages", resource: resource %>
@@ -27,7 +27,7 @@
       <%= f.label :password_confirmation , "パスワード確認"%><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
-
+    </div>
     <div class="actions">
       <%= f.submit "登録" %>
     </div>
