--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container"></div>
-<h1>編集画面</h1>
+<h1 class="shadow">編集画面</h1>
 <%= form_with model: @customer,url: admin_customer_path do |f| %>
   <div class="form-group row">
-   <label for="inputIsDeleted" class="col-sm-2 col-form-label">会員ステータス</label>
+   <h4 class="shadow"><label for="inputIsDeleted" class="col-sm-2 col-form-label">会員ステータス</label></h4>
    <div class="col-sm-10">
     <%= f.radio_button :is_deleted, false, autofocus: true, id: "inputIsDeleted0" %>
   <%= f.label :is_deleted0, "有効" %>
