--- a/app/views/admin/recipes/index.html.erb
+++ b/app/views/admin/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>レシピ一覧</h1>
+<h1 class="shadow">レシピ一覧</h1>
 <% @recipes.each do |recipe|%>
   <div>
     <%= link_to recipe.title, admin_recipe_path(recipe) %>
