--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,8 +2,10 @@
 <h1 class="shadow">編集画面</h1>
 <%= form_with model: @customer,url: admin_customer_path do |f| %>
   <div class="form-group row">
-   <h4 class="shadow"><label for="inputIsDeleted" class="col-sm-2 col-form-label">会員ステータス</label></h4>
-   <div class="col-sm-10">
+   <div class="col-8">
+    <h4 class="shadow"><label for="inputIsDeleted">会員ステータス</label></h4>
+   </div>
+   <div class="col-4">
     <%= f.radio_button :is_deleted, false, autofocus: true, id: "inputIsDeleted0" %>
   <%= f.label :is_deleted0, "有効" %>
    <%= f.radio_button :is_deleted, true, autofocus: true, id: "inputIsDeleted1" %>
