--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -1,22 +1,30 @@
-<div class="container">
   <h1 class="shadow" >レシピ一覧</h1>
-
-  <% if @recipe.images.attached? %>
-    <div class="center-text">
-        <% @recipe.images.each do |image| %>
-        <%= image_tag image, class: "img-fluid", size: "200x200" %>
-        <% end %>
-    </div>
-  <% end %>
-
+<div class="container">
   <% @recipes.each do |recipe| %>
-    <div>
+  <div class="row">
+    <div class="col-8">
+    <% if recipe.images.attached? %>
+      <div class="center-text">
+          <% recipe.images.each do |image| %>
+          <%= image_tag image, class: "img-fluid", size: "200x200" %>
+          <% end %>
+      </div>
+    <% end %>
+    </div>
+
+
+    <div class="col-2">
       <%= link_to recipe.title, recipe_path(recipe), class: "btn btn-dark" %>
+    </div>
+    <div class="col-1">
       <small class="text-black-50">
         <%= link_to recipe.customer.name, customer_mypage_path(recipe.customer), class: "btn btn-primary" %>
       </small>
+    </div>
+    <div class="col-1">
       <%= render "public/favorites/favorites", recipe: recipe %>
     </div>
+  </div>
   <% end %>
 
 </div>
