--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 <div class="container">
 <div class="row">
-<div class="col-md-10">
+<div class="navbar navbar-expand-lg navbar-light bg-light">
     <% if customer_signed_in? %>
       <%= link_to new_recipe_path, class: "btn btn-success" do %>
         レシピを投稿<i class="fa-solid fa-pen"></i>
