--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container"></div>
-<h1 class="shadow">編集画面</h1>
+<h1>編集画面</h1>
 <%= form_with model: @customer,url: admin_customer_path do |f| %>
   <div class="form-group row">
    <div class="col-8">
-    <h4 class="shadow"><label for="inputIsDeleted">会員ステータス</label></h4>
+    <h4><label for="inputIsDeleted">会員ステータス</label></h4>
    </div>
    <div class="col-4">
     <%= f.radio_button :is_deleted, false, autofocus: true, id: "inputIsDeleted0" %>
