--- a/app/views/admin/recipes/index.html.erb
+++ b/app/views/admin/recipes/index.html.erb
@@ -1,9 +1,24 @@
-<h1 class="shadow">レシピ一覧</h1>
-<% @recipes.each do |recipe|%>
-  <div>
-    <%= link_to recipe.title, admin_recipe_path(recipe) %>
-    <small class="text-black-50">
-      <%= link_to recipe.customer.name, admin_customer_path(recipe.customer) %>
-    </small>
+<h1>レシピ一覧</h1>
+<div class="container">
+  <% @recipes.each do |recipe|%>
+  <div class="row">
+    <div class="col-8">
+      <% if recipe.images.attached? %>
+        <div class="center-text">
+            <% recipe.images.each do |image| %>
+            <%= image_tag image, class: "img-fluid", size: "200x200" %>
+            <% end %>
+        </div>
+      <% end %>
+    <div class="col-2">
+      <%= link_to recipe.title, admin_recipe_path(recipe) %>
+    
+    </div>
+    <div class="col-2">
+      <small class="text-black-50">
+        <%= link_to recipe.customer.name, admin_customer_path(recipe.customer) %>
+      </small>
+    </div>
   </div>
-<% end %>
+  <% end %>
+</div>
