--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,49 +16,72 @@
 
 <div class="container">
 <div class="row">
-<div class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="col-2">
     <% if customer_signed_in? %>
       <%= link_to new_recipe_path, class: "btn btn-success" do %>
         レシピを投稿<i class="fa-solid fa-pen"></i>
       <% end %>
+</div>
+<div class="col-2">
       <%= link_to recipes_path, class: "btn btn-success" do %>
         レシピ一覧<i class="fa-solid fa-utensils"></i>
       <% end %>
+</div>
+<div class="col-2">
       <%= link_to favorites_recipes_path, class: "btn btn-success" do %>
         お気に入り<i class="fa-solid fa-heart"></i>
       <% end %>
+</div>
+<div class="col-2">
       <%= link_to customer_mypage_path(current_customer), class: "btn btn-success" do %>
         マイページ<i class="fa-solid fa-user"></i>
       <% end %>
+</div>
+<div class="col-2">
       <%= link_to bags_path, class: "btn btn-success" do %>
         買い物リスト<i class="fa-solid fa-pen"></i>
       <% end %>
+</div>
+<div class="col-2">
       <%= link_to destroy_customer_session_path, method: :delete, class: "btn btn-secondary" do %>
         ログアウト<i class="fa-solid fa-right-from-bracket"></i>
       <% end %>
+</div>
+<div class="col-4">
     <% elsif admin_signed_in? %>
       <%= link_to destroy_admin_session_path, method: :delete, class: "btn btn-success" do %>
         管理者ログアウト<i class="fa-solid fa-lock"></i>
       <% end %>
+</div>
+<div class="col-4">
       <%= link_to admin_customers_path, class: "btn btn-success" do %>
         会員一覧<i class="fa-solid fa-lock"></i>
       <% end %>
+</div>
+<div class="col-4">
       <%= link_to admin_recipes_path, class: "btn btn-success" do %>
         レシピ一覧<i class="fa-solid fa-utensils"></i>
       <% end %>
+</div>
+<div class="col-3">
     <% else %>
-      <div class="row">
       <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
-      </div>
+</div>
+<div class="col-3">
       <%= link_to new_customer_registration_path, class: "btn btn-success" do %>
         新規登録<i class="fa-solid fa-address-card"></i>
       <% end %>
+</div>
+<div class="col-3">
       <%= link_to new_customer_session_path, class: "btn btn-success" do %>
         ログイン<i class="fa-solid fa-right-to-bracket"></i>
       <% end %>
+</div>
+<div class="col-3">
       <%= link_to new_admin_session_path, class: "btn btn-success" do %>
         管理者ログイン<i class="fa-solid fa-unlock"></i>
       <% end %>
+</div>
     <% end %>
 </div>
 </div>
