--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h2 class="shadow"><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
+  <h2><%= @customer == current_customer ? "マイページ(#{@customer.name}さん)" : "#{@customer.name}さんのページ" %></h2>
 
-  <div class="shadow">
+  <div>
     <h3>投稿したレシピ一覧</h3>
     <% if @recipes.present? %>
       <ul>
