--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 <div class="container">
 <div class="row">
 <div class="col-2">
+  <div class="nav-ber"></div>
     <% if customer_signed_in? %>
       <%= link_to new_recipe_path, class: "btn btn-success" do %>
         レシピを投稿<i class="fa-solid fa-pen"></i>
