--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.container {
+
+}
+
 .frame {
         border: 1px solid black; /* 枠線を表示させる */
         padding: 10px; /* 枠内の余白を設定する */
