--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
 </div>
 </div>
 </div>
-<div class="shadow"><%= flash[:notice] %></div>
+<div><%= flash[:notice] %></div>
     <%= yield %>
   </body>
 </html>
