--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -6,10 +6,10 @@
     <h4><label for="inputIsDeleted">会員ステータス</label></h4>
    </div>
    <div class="col-4">
-    <%= f.radio_button :is_deleted, false, autofocus: true, id: "inputIsDeleted0" %>
-  <%= f.label :is_deleted0, "有効" %>
-   <%= f.radio_button :is_deleted, true, autofocus: true, id: "inputIsDeleted1" %>
-  <%= f.label :is_deleted1, "退会" %>
+    <%= f.radio_button :is_deleted, false %>
+    <%= f.label :is_deleted, "有効", value: false %>
+    <%= f.radio_button :is_deleted, true %>
+    <%= f.label :is_deleted, "退会", value: true %>
    </div>
   </div>
   <div class="form-group row">
