--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
   </head>
 
   <body class="background-image">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <!--ログインしている場合-->
         <% if customer_signed_in? %>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <%= link_to new_recipe_path, class: "nav-link" do %>
                 レシピを投稿<i class="fa-solid fa-pen"></i>
@@ -38,12 +42,14 @@
                 買い物リスト<i class="fa-solid fa-pen"></i>
               <% end %>
             </li>
-          </ul>
-          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-            <%= link_to destroy_customer_session_path, method: :delete, class: "nav-link" do %>
-              ログアウト<i class="fa-solid fa-right-from-bracket"></i>
-            <% end %>
-          </ul>
+            </ul>
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+              <%= link_to destroy_customer_session_path, method: :delete, class: "nav-link" do %>
+                ログアウト<i class="fa-solid fa-right-from-bracket"></i>
+              <% end %>
+            </ul>
+          </div>
+
 
           <!--adminがログインしている場合-->
         <% elsif admin_signed_in? %>
