--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -1,4 +1,4 @@
-  <h1>レシピ一覧</h1>
+  <h1 class="center-text">レシピ一覧</h1>
 <div class="container">
   <% @recipes.each do |recipe| %>
   <div class="row">
