--- a/app/views/admin/recipes/index.html.erb
+++ b/app/views/admin/recipes/index.html.erb
@@ -12,7 +12,7 @@
       <% end %>
     <div class="col-2">
       <%= link_to recipe.title, admin_recipe_path(recipe) %>
-    
+
     </div>
     <div class="col-2">
       <small class="text-black-50">
@@ -20,5 +20,6 @@
       </small>
     </div>
   </div>
+  <%= recipe.created_at.strftime("%Y-%m-%d %H:%M") %>
   <% end %>
 </div>
