--- a/app/views/admin/recipes/edit.html.erb
+++ b/app/views/admin/recipes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="shadow">レシピの編集</h1>
+<h1>レシピの編集</h1>
 <%= form_with model: @recipe, url: admin_recipe_path(@recipe), method: :patch do |f| %>
    <div class="form-group">
   <%= f.label :title, "タイトル" %>
