--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,11 @@
                 買い物リスト<i class="fa-solid fa-pen"></i>
               <% end %>
             </li>
-
+            <li class="nav-item">
+              <%= link_to customer_mypage_path(current_customer), class: "nav-link" do %>
+                マイページ<i class="fa-solid fa-pen"></i>
+              <% end %>
+            </li>
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
               <%= link_to destroy_customer_session_path, method: :delete, class: "nav-link" do %>
