--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -15,7 +15,7 @@
 
   <div class="tag-box">
   <% @recipe.tags.each do |tag| %>
-    <span class="badge badge-warning"><%= tag.name %></span>
+    <span class="badge rounded-pill text-bg-danger"><%= tag.name %></span>
   <% end %>
   </div>
 
